#11 Refactor  : save함수에 썸네일 추출 중복을 없앰